<resources>
    <string name="app_name">Ma_Calculatrice</string>
    <string name="clear">C</string>
    <string name="moins">-</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="suppr">suppr</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="add">+</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="mod">%</string>
    <string name="_0">0</string>
    <string name="virgule">.</string>
    <string name="egal">=</string>
    <string name="div">/</string>
    <string name="ouv">(</string>
    <string name="fermer">)</string>
    <string name="history">history</string>
    <string name="ouvert">(</string>
    <string name="Fermer">)</string>
    <string name="mult">*</string>

    <string name="Graphic">Mode Graphique</string>
    <string name="tosuprim">toSuprim</string>
</resources>
